# surogate_eval

./: .gitignore  README.md  pyproject.toml
docs/: .gitignore  CNAME  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/eval/: crafting-configs.md  datasets.md  guardrails.md  (+8 more)
examples/: config.yaml  custom_dataset_test.yaml  fast_test.yaml  local_dataset_test.yaml
examples/datasets/: classification_test.jsonl  embedding_test.jsonl  longbench_romanian.jsonl  meeting_summaries.jsonl  multi_turn_test.jsonl  multimodal_test.jsonl  performance_long.jsonl  performance_medium.jsonl  performance_short.jsonl  safe_prompts.jsonl  single_turn_test.csv  single_turn_test.jsonl
examples/scripts/: generate_embedding_test_data.py
surogate_eval/: README.md  eval.py  report.py  results.py  runners.py
surogate_eval/backend/: __init__.py  aggregator.py  base.py  local.py
surogate_eval/benchmarks/: __init__.py  base.py  generic.py  loader.py  registry.py
surogate_eval/cli/: __init__.py  eval.py  main.py
surogate_eval/config/: eval_config.py  loader.py
surogate_eval/datasets/: __init__.py  loader.py  prompts.py  test_case.py  validator.py
surogate_eval/metrics/: __init__.py  base.py  conversation.py  dag_eval.py  embeddings.py  g_eval.py  performance.py  registry.py  safety.py
surogate_eval/models/: __init__.py  deepeval_wrapper.py
surogate_eval/security/: __init__.py  base.py  guardrails.py  red_team.py  risk_assessment.py  vulnerabilities.py
surogate_eval/targets/: __init__.py  base.py  factory.py  model.py
surogate_eval/templates/: report.html.j2
surogate_eval/utils/: command.py  dict.py  dist.py  fs.py  logger.py  system_info.py  tensor.py
templates/: report.md.j2
(+11 files in other folders)
